--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,12 +102,18 @@
 						</div>
 					</button>
 				
-					<button type="button" class="btn btn-success homebtn">
+					<button type="button" class="btn btn-success homebtn mb-3">
 						<div class="d-flex flex-column align-items-center">
 							<span class="fs-2">Game Mode</span>
 							<small class="fw-light">Select a mode to play</small>
 						</div>
 					</button>
+					<a href="pages/register.html" class="btn homebtn text-decoration-none register">
+						<div class="d-flex flex-column align-items-center">
+							<span class="fs-2">Register</span>
+							<small class="fw-light">Create an account to play</small>
+						</div>
+					</a>
 				</div>				
 			</div>
 		</div>
