authentication pages done

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -64,8 +64,8 @@
 			</li>
 			<li >
 				<a href="#" class="nav-link text-white fw-bolder">
-					<i class="fa-solid fa-right-to-bracket"></i>
-					Login
+					<i class="fa-solid fa-right-from-bracket"></i>
+					Logout
 				</a>
 			</li>
 			</ul>
@@ -74,7 +74,7 @@
 			<div class="dropdown">
 				<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
 				id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-				<img src="./assets/user1.png" alt="" width="32" height="32" class="rounded-circle me-2">
+				<img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
 				<strong>mdo</strong>
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
@@ -102,21 +102,16 @@
 						</div>
 					</button>
 				
+					<button type="button" class="btn btn-success homebtn mb-3">
+						<div class="d-flex flex-column align-items-center">
+							<span class="fs-2">Game Mode</span>
+							<small class="fw-light">Select a mode to play</small>
+						</div>
+					</button>
 					<a href="pages/register.html" class="btn homebtn text-decoration-none register">
 						<div class="d-flex flex-column align-items-center">
 							<span class="fs-2">Register</span>
 							<small class="fw-light">Create an account to play</small>
-						</div>
-					</a>
-					<div class="separator">
-						<hr>
-						<span>Or</span>
-						<hr>
-					</div>				
-					<a href="pages/login.html" class="btn text-decoration-none login">
-						<div class="d-flex flex-column align-items-center">
-							<span class="fs-2">Login</span>
-							<small class="fw-light">Login to play with a friend</small>
 						</div>
 					</a>
 				</div>				
