--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -7,46 +7,48 @@
 	<title>Register</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
+	<link href="../css/auth.css" rel="stylesheet">
 </head>
 
-<body class="bg-light">
-	<div class="container py-5">
+<body>
+	<div class="container">
 		<div class="row justify-content-center">
-		  <div class="col-md-6">
-			<div class="card shadow">
-			  <div class="card-header text-center bg-primary text-white">
-				<h3>Sign In</h3>
-			  </div>
-			  <div class="card-body">
-				<form id="loginForm">
-				  <div class="mb-3">
-					<label for="email" class="form-label">Email address</label>
-					<input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-				  </div>
-				  <div class="mb-3">
-					<label for="password" class="form-label">Password</label>
-					<input type="password" class="form-control" id="password" placeholder="Enter your password" required>
-				  </div>
-				  <div class="mb-3 form-check">
-					<input type="checkbox" class="form-check-input" id="rememberMe">
-					<label class="form-check-label" for="rememberMe">Remember me</label>
-				  </div>
-				  <div class="d-grid">
-					<button type="submit" class="btn btn-primary">Sign In</button>
-				  </div>
-				</form>
-			  </div>
-			  <div class="card-footer text-center">
-				Don't have an account? <a href="register.html" class="text-primary">Register</a>
-			  </div>
+			<div class="col-md-6">
+				<div class="card">
+					<div class="card-bg">
+
+					</div>
+					<div>
+						<h2 class="text-center mt-4 fw-bold">
+							LOGIN
+						</h2>
+					</div>
+					<div class="card-body p-4">
+						<form id="registerForm">
+							<div class="mb-4">
+								<!-- <label for="email" class="form-label">Email Address</label> -->
+								<input type="email" class="form-control" id="email" placeholder="Enter your username or email" required>
+							</div>
+							<div class="mb-4">
+								<!-- <label for="password" class="form-label">Password</label> -->
+								<input type="password" class="form-control" id="password"
+									placeholder="Enter your password" required>
+							</div>
+							<div class="d-grid">
+								<button type="submit" class="btn btn-register">LOGIN</button>
+							</div>
+						</form>
+					</div>
+					<div class="card-footer text-secondary">
+						Don't have an account? <a href="login.html">Sign Up</a>
+					</div>
+				</div>
 			</div>
-		  </div>
 		</div>
-	  </div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-		crossorigin="anonymous"></script>
+	</div>
+
+	<script src="../javascript/login.js" ></script>
 </body>
 
 </html>
