login with endpoint /api/token/ done

--- a/frontend/index1.html
+++ b/frontend/index1.html
@@ -63,7 +63,7 @@
 				</a>
 			</li>
 			<li >
-				<a href="#" class="nav-link text-white fw-bolder">
+				<a href="index.html" class="nav-link text-white fw-bolder">
 					<i class="fa-solid fa-right-from-bracket"></i>
 					Logout
 				</a>
@@ -108,12 +108,6 @@
 							<small class="fw-light">Select a mode to play</small>
 						</div>
 					</button>
-					<a href="pages/register.html" class="btn homebtn text-decoration-none register">
-						<div class="d-flex flex-column align-items-center">
-							<span class="fs-2">Register</span>
-							<small class="fw-light">Create an account to play</small>
-						</div>
-					</a>
 				</div>				
 			</div>
 		</div>
