--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -25,10 +25,11 @@
 						</h2>
 					</div>
 					<div class="card-body p-4">
-						<form id="registerForm">
+						<form id="loginForm">
 							<div class="mb-4">
-								<!-- <label for="email" class="form-label">Email Address</label> -->
-								<input type="email" class="form-control" id="email" placeholder="Enter your username or email" required>
+								<!-- <label for="username" class="form-label">Username</label> -->
+								<input type="text" class="form-control" id="username" placeholder="Enter your username"
+									required>
 							</div>
 							<div class="mb-4">
 								<!-- <label for="password" class="form-label">Password</label> -->
