--- a/frontend/pages/tournament.html
+++ b/frontend/pages/tournament.html
@@ -1,12 +1,251 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link href="../css/style.css" rel="stylesheet">
+	<link href="../css/tournaments.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<title>Ping Pong</title>
 </head>
+
 <body>
-	
+	<!-- <h1>Hey this transcendence</h1> -->
+
+	<div class="d-flex">
+		<div class="d-flex flex-column flex-shrink-0 p-3 text-white sidenav text-warning" style="width: 250px;">
+			<a href="/"
+				class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none fw-bold">
+				<i class="fa-solid fa-table-tennis-paddle-ball fa-2x" style="padding-right: 8px;"></i>
+				<span class="fs-3">Ping Pong</span>
+			</a>
+			<hr>
+			<ul class="nav nav-pills flex-column mb-auto d-flex flex-column" id="navlist">
+				<li class="nav-item flex-grow-1">
+					<a href="#" class="nav-link active fw-bolder" aria-current="page">
+						<i class="fa-solid fa-house"></i>
+						Home
+					</a>
+				</li>
+				<li class="nav-item flex-grow-1">
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-gauge"></i>
+						Dashboard
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-ranking-star"></i>
+						Leaderboard
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-user-group"></i>
+						Friend List
+					</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-gear"></i>
+						Settings
+					</a>
+				</li>
+			</ul>
+
+			<ul class="nav nav-pills flex-column">
+				<li class="nav-item mb-auto">
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-moon"></i>
+						Dark Mode
+					</a>
+				</li>
+				<li>
+					<a href="#" class="nav-link text-white fw-bolder">
+						<i class="fa-solid fa-right-to-bracket"></i>
+						Login
+					</a>
+				</li>
+			</ul>
+
+			<hr>
+			<div class="dropdown">
+				<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
+					id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+					<img src="./assets/user1.png" alt="" width="32" height="32" class="rounded-circle me-2">
+					<strong>mdo</strong>
+				</a>
+				<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
+					<li><a class="dropdown-item" href="#">New project...</a></li>
+					<li><a class="dropdown-item" href="#">Settings</a></li>
+					<li><a class="dropdown-item" href="#">Profile</a></li>
+					<li>
+						<hr class="dropdown-divider">
+					</li>
+					<li><a class="dropdown-item" href="#">Sign out</a></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="container justify-content-center align-items-center mt-5" style="height: 100vh;">
+			<div class="mt-5">
+				<div class="d-flex justify-content-between">
+					<a href="tournaments.html">
+						<i class="fas fa-chevron-left pr-1 text-white fa-2x"></i>
+					</a>
+					<h1 class="fw-bold">Tournament One</h1>
+					<button class="btn btn-success create">
+						Create +
+					</button>
+				</div>
+
+				<div class="d-flex justify-content-around mt-5 text-center">
+					<div class="submen">
+						<i class="fa-regular fa-chess-queen"></i>
+						Tournaments 1/10
+					</div>
+					<div class="submen">
+						<i class="fa-solid fa-users"></i>
+						Players 4/4
+					</div>
+					<div class="submen">
+						<i class="fa-solid fa-calendar-days"></i>
+						Date 01/01/2025
+					</div>
+					<div class="">
+						<!-- <i class="fa-solid fa-calendar-days"></i> -->
+						<button class="btn submenactive text-light">
+							Join Tournament
+						</button>
+						
+					</div>
+				</div>
+
+				<div class="container mt-5">
+
+					<div class="d-flex flex-wrap justify-content-center justify-content-evenly pt-4">
+					<!-- Players list card -->
+					<div class="">
+						<div class="card text-white bg-dark mb-3 pcard">
+							<div class="card-body">
+								<h4 class="card-title">Players</h4>
+								<div class="table-responsive"></div>
+								<table class="table table-dark table-hover table-borderless">
+									<tbody>
+										<tr>
+											<th scope="row">1</th>
+											<td>Ruseel bill</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">2</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">3</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">4</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">5</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">6</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">7</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+										<tr>
+											<th scope="row">8</th>
+											<td>Larry the Bird</td>
+											<td><i class="fa-solid fa-circle "></i></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+					<!-- Tournament informations -->
+					<div class="infos">
+						<div class="row">
+							<div class="card col-6 col-md-12 text-white bg-dark mb-3 trinfo">
+								<div class="card-body">
+									<i class="fa-solid fa-user-plus"></i>
+									<h6 class="card-title fw-bold mt-2">No. Players</h6>
+									<p class="card-text">
+									<span class="display-3">4</span></p>
+								</div>
+							</div>
+							<div class="card col-6 col-md-12 text-white bg-dark mb-3 trinfo">
+								<div class="card-body">
+									<i class="fa-solid fa-dice"></i>
+									<h6 class="card-title fw-bold mt-2">Rounds</h6>
+									<p class="card-text">
+									<span class="display-3">4</span></p>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="card col-6 col-md-12 text-white bg-dark mb-3 trinfo">
+								<div class="card-body">
+									<i class="fa-solid fa-circle-play"></i>
+									<h6 class="card-title fw-bold mt-2">Status</h6>
+									<p class="card-text">
+									<span class="display-3">On</span></p>
+								</div>
+							</div>
+							<div class="card col-6 col-md-12 text-white bg-dark mb-3 trinfo">
+								<div class="card-body">
+									<i class="fa-solid fa-users"></i>
+									<h6 class="card-title fw-bold mt-2">Limeted to</h6>
+									<p class="card-text">
+									<span class="display-3">8</span></p>
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="card col-12 text-white bg-dark mb-3 trinfolast">
+								<div class="card-body">
+									<i class="fa-solid fa-ranking-star"></i>
+									<h6 class="card-title mt-2">Winner</h6>
+									<p class="card-text">
+									<span class="display-3">--</span></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+
+
+	</div>
+
+	<script src="javascript/app.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
