--- a/frontend/pages/tournaments.html
+++ b/frontend/pages/tournaments.html
@@ -133,9 +133,9 @@
 									<tbody>
 									  <tr>
 										<th scope="row">1</th>
-										<td>PUBG Tournament</td>
-										<td>Jan 12, 2023</td>
-										<td>570</td>
+										<td><a href="tournament.html" style="color: inherit; text-decoration: none;">Tournament One</a></td>
+										<td>Dec 30, 2024</td>
+										<td>8</td>
 										<td>Playing</td>
 									  </tr>
 									  <tr>
