--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 	integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link href="css/style.css" rel="stylesheet">
+	<link href="css/auth.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Ping Pong</title>
@@ -24,31 +25,31 @@
 			<hr>
 			<ul class="nav nav-pills flex-column mb-auto d-flex flex-column" id="navlist">
 				<li class="nav-item flex-grow-1">
-					<a href="#" class="nav-link active fw-bolder" aria-current="page">
+					<a href="/" class="nav-link active fw-bolder" aria-current="page">
 						<i class="fa-solid fa-house"></i>
 						Home
 					</a>
 				</li>
 				<li class="nav-item flex-grow-1">
-					<a href="#" class="nav-link text-white fw-bolder">
+					<a href="/dashboard" class="nav-link text-white fw-bolder" data-link>
 						<i class="fa-solid fa-gauge"></i>
 						Dashboard
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link text-white fw-bolder">
+					<a href="/login" class="nav-link text-white fw-bolder" data-link>
 						<i class="fa-solid fa-ranking-star"></i>
 						Leaderboard
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link text-white fw-bolder">
+					<a href="#" class="nav-link text-white fw-bolder" data-link>
 						<i class="fa-solid fa-user-group"></i>
 						Friend List
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link text-white fw-bolder">
+					<a href="#" class="nav-link text-white fw-bolder" data-link>
 						<i class="fa-solid fa-gear"></i>
 						Settings
 					</a>
@@ -57,13 +58,13 @@
 
 			<ul class="nav nav-pills flex-column">
 			<li class="nav-item mb-auto">
-				<a href="#" class="nav-link text-white fw-bolder">
+				<a href="#" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-moon"></i>
 					Dark Mode
 				</a>
 			</li>
 			<li >
-				<a href="#" class="nav-link text-white fw-bolder">
+				<a href="#" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-right-to-bracket"></i>
 					Login
 				</a>
@@ -78,9 +79,9 @@
 				<strong>mdo</strong>
 				</a>
 				<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-					<li><a class="dropdown-item" href="#">New project...</a></li>
-					<li><a class="dropdown-item" href="#">Settings</a></li>
-					<li><a class="dropdown-item" href="#">Profile</a></li>
+					<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
+					<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
+					<li><a class="dropdown-item" href="#" data-link>Profile</a></li>
 					<li>
 						<hr class="dropdown-divider">
 					</li>
@@ -89,45 +90,12 @@
 			</div>
 		</div>
 
-		<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-			<div class="row d-flex justify-content-center align-items-center w-100">
-				<div class="col-12 col-md-6 d-flex justify-content-center">
-					<img src="assets/pong.png" alt="pong_img" class="img-fluid" style="max-height: 400px; width: auto;">
-				</div>
-				<div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
-					<button type="button" class="btn btn-success homebtn mb-3">
-						<div class="d-flex flex-column">
-							<span class="fs-2">Start Game</span>
-							<small class="fw-light">Play with a training AI</small>
-						</div>
-					</button>
-				
-					<a href="pages/register.html" class="btn homebtn text-decoration-none register">
-						<div class="d-flex flex-column align-items-center">
-							<span class="fs-2">Register</span>
-							<small class="fw-light">Create an account to play</small>
-						</div>
-					</a>
-					<div class="separator">
-						<hr>
-						<span>Or</span>
-						<hr>
-					</div>				
-					<a href="pages/login.html" class="btn text-decoration-none login">
-						<div class="d-flex flex-column align-items-center">
-							<span class="fs-2">Login</span>
-							<small class="fw-light">Login to play with a friend</small>
-						</div>
-					</a>
-				</div>				
-			</div>
+		<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;" id="app">
+			<!-- App load -->
 		</div>
-		
-		
-
 	</div>
 
-	<script src="javascript/app.js"></script>
+	<script type="module" src="javascript/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
