--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -20,7 +20,7 @@
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-3 text-center">
-						<img src="https://via.placeholder.com/150" alt="Profile Picture"
+						<img src="../assets/user.png" alt="Profile Picture"
 							class="rounded-circle img-thumbnail">
 					</div>
 					<!-- user infos -->
