--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -11,7 +11,7 @@
 				</div>
 			</button>
 		
-			<a href="pages/register.html" class="btn homebtn text-decoration-none register" data-link>
+			<a href="#" type="button" class="btn homebtn text-decoration-none register" data-bs-toggle="modal" data-bs-target="#registerMod">
 				<div class="d-flex flex-column align-items-center">
 					<span class="fs-2">Register</span>
 					<small class="fw-light">Create an account to play</small>
@@ -21,13 +21,123 @@
 				<hr>
 				<span>Or</span>
 				<hr>
-			</div>				
-			<a href="/login" class="btn text-decoration-none login" data-link>
+			</div>
+			<a href="#" type="button" class="btn text-decoration-none login" data-bs-toggle="modal" data-bs-target="#loginMod">
 				<div class="d-flex flex-column align-items-center">
 					<span class="fs-2">Login</span>
 					<small class="fw-light">Login to play with a friend</small>
 				</div>
 			</a>
 		</div>				
+	</div>
+</div>
+
+<!-- Login Modals -->
+
+<div class="modal fade" id="loginMod" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal-dialog modal-dialog-centered">
+	<div class="modal-content">
+	<div class="row justify-content-end">
+		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+	</div>
+	<div class="modal-body">
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-12">
+					<div class="card">
+						<div class="card-bg">
+
+						</div>
+						<div>
+							<h2 class="text-center mt-4 fw-bold">
+								LOGIN
+							</h2>
+						</div>
+						<div class="card-body p-4">
+							<form id="loginForm">
+								<div class="mb-4">
+									<!-- <label for="username" class="form-label">Username</label> -->
+									<input type="text" class="form-control" id="username" placeholder="Enter your username"
+										required>
+								</div>
+								<div class="mb-4">
+									<!-- <label for="password" class="form-label">Password</label> -->
+									<input type="password" class="form-control" id="password"
+										placeholder="Enter your password" required>
+								</div>
+								<div class="d-grid">
+									<button type="submit" class="btn btn-register">LOGIN</button>
+								</div>
+							</form>
+						</div>
+						<div class="card-footer text-secondary">
+							Don't have an account? <a href="#" data-bs-target="#registerMod" data-bs-toggle="modal" data-bs-dismiss="modal">Sign Up</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+</div>
+</div>
+
+<!-- Register Modal -->
+
+<div class="modal fade" id="registerMod" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered">
+		<div class="modal-content">
+		<div class="row justify-content-end">
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-12">
+						<div class="card">
+							<div class="card-bg">
+		
+							</div>
+							<div>
+								<h2 class="text-center mt-4 fw-bold">
+									REGISTER
+								</h2>
+							</div>
+							<div class="card-body p-4">
+								<form id="registerForm">
+									<div class="mb-4">
+										<!-- <label for="username" class="form-label">Username</label> -->
+										<input type="text" class="form-control" id="username" placeholder="Enter your username"
+											required>
+									</div>
+									<div class="mb-4">
+										<!-- <label for="email" class="form-label">Email Address</label> -->
+										<input type="email" class="form-control" id="email" placeholder="Enter your email"
+											required>
+									</div>
+									<div class="mb-4">
+										<!-- <label for="password" class="form-label">Password</label> -->
+										<input type="password" class="form-control" id="password"
+											placeholder="Enter your password" required>
+									</div>
+									<div class="mb-4">
+										<!-- <label for="confirmPassword" class="form-label">Confirm Password</label> -->
+										<input type="password" class="form-control" id="confirmPassword"
+											placeholder="Confirm your password" required>
+									</div>
+									<div class="d-grid">
+										<button type="submit" class="btn btn-register">REGISTER</button>
+									</div>
+								</form>
+							</div>
+							<div class="card-footer text-secondary">
+								Already have an account? <a href="#" data-bs-target="#loginMod" data-bs-toggle="modal" data-bs-dismiss="modal">Sign In<a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
 	</div>
 </div>
