--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
 				<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
 					<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
 					<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
-					<li><a class="dropdown-item" href="#" data-link>Profile</a></li>
+					<li><a class="dropdown-item" href="/profile" data-link>Profile</a></li>
 					<li>
 						<hr class="dropdown-divider">
 					</li>
@@ -95,7 +95,7 @@
 		</div>
 	</div>
 
-	<script src="javascript/app.js"></script>
+	<script type="module" src="javascript/app.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
