--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,93 +9,25 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/auth.css" rel="stylesheet">
+	<link href="css/tournaments.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Ping Pong</title>
 </head>
 
 <body>
-	<!-- <h1>Hey this transcendence</h1> -->
-
 	<div class="d-flex">
-		<div class="d-flex flex-column flex-shrink-0 p-3 text-white sidenav text-warning" style="width: 250px;">
-			<a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none fw-bold">
-				<i class="fa-solid fa-table-tennis-paddle-ball fa-2x" style="padding-right: 8px;"></i>
-				<span class="fs-3">Ping Pong</span>
-			</a>
-			<hr>
-			<ul class="nav nav-pills flex-column mb-auto d-flex flex-column" id="navlist">
-				<li class="nav-item flex-grow-1">
-					<a href="/" class="nav-link active fw-bolder" aria-current="page">
-						<i class="fa-solid fa-house"></i>
-						Home
-					</a>
-				</li>
-				<li class="nav-item flex-grow-1">
-					<a href="/dashboard" class="nav-link text-white fw-bolder" data-link>
-						<i class="fa-solid fa-gauge"></i>
-						Dashboard
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="/login" class="nav-link text-white fw-bolder" data-link>
-						<i class="fa-solid fa-ranking-star"></i>
-						Leaderboard
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link text-white fw-bolder" data-link>
-						<i class="fa-solid fa-user-group"></i>
-						Friend List
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" class="nav-link text-white fw-bolder" data-link>
-						<i class="fa-solid fa-gear"></i>
-						Settings
-					</a>
-				</li>
-			</ul>
+		<side-nav></side-nav>
 
-			<ul class="nav nav-pills flex-column">
-			<li class="nav-item mb-auto">
-				<a href="#" class="nav-link text-white fw-bolder" data-link>
-					<i class="fa-solid fa-moon"></i>
-					Dark Mode
-				</a>
-			</li>
-			<li >
-				<a href="#" class="nav-link text-white fw-bolder" data-link>
-					<i class="fa-solid fa-right-to-bracket"></i>
-					Login
-				</a>
-			</li>
-			</ul>
-
-			<hr>
-			<div class="dropdown">
-				<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-				id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-				<img src="./assets/user1.png" alt="" width="32" height="32" class="rounded-circle me-2">
-				<strong>mdo</strong>
-				</a>
-				<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-					<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
-					<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
-					<li><a class="dropdown-item" href="/profile" data-link>Profile</a></li>
-					<li>
-						<hr class="dropdown-divider">
-					</li>
-					<li><a class="dropdown-item" href="#">Sign out</a></li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;" id="app">
+		<div class="container d-flex justify-content-center align-items-center" id="app">
 			<!-- App load -->
 		</div>
 	</div>
 
+	<!-- My scripts -->
 	<script type="module" src="javascript/app.js"></script>
+	<script type="module" src="javascript/components/sidenav.js"></script>
+
+	<!-- Bootstrap Elements -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
