fix: register, login and logout without an error

--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -50,12 +50,18 @@
 			Dark Mode
 		</a>
 	</li>
-	<li >
+	<li class="nav-item">
+		<button class="btn text-white fw-bolder logoutbtn" id="logoutBtn">
+			<i class="fa-solid fa-right-from-bracket"></i>
+			Logout
+		</button>
+	</li>
+	<!-- <li >
 		<a href="#" class="nav-link text-white fw-bolder" data-link>
 			<i class="fa-solid fa-right-to-bracket"></i>
 			Login
 		</a>
-	</li>
+	</li> -->
 	</ul>
 
 	<hr>
