feat: access to certain part of the client once connected

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -28,9 +28,10 @@
 							</div>
 							<div class="text-center">
 								<i class="fa-regular fa-user"></i>
-								<a href="#" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+								<button class="btn text-white friends" type="button" data-bs-toggle="modal"
+									data-bs-target="#staticBackdrop" id="friendListBtn">
 									Friend List
-								</a>
+								</button>
 								<p class="text-success">8</p>
 							</div>
 							<div class="text-center">
@@ -190,7 +191,7 @@
 	<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+				<h5 class="modal-title" id="staticBackdropLabel">Friend List</h5>
 				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
 			<div class="modal-body">
@@ -204,94 +205,8 @@
 										<th scope="col">Game Type</th>
 									</tr>
 								</thead>
-								<tbody>
-									<tr>
-										<th scope="row">2</th>
-										<td>Apex Legends Finals</td>
-									</tr>
-									<tr>
-										<th scope="row">3</th>
-										<td>Rocket League Weekly</td>
-									</tr>
-									<tr>
-										<th scope="row">4</th>
-										<td>Call of Duty Warzone</td>
-									</tr>
-									<tr>
-										<th scope="row">5</th>
-										<td>Fortnite Championship</td>
-									</tr>
-									<tr>
-										<th scope="row">6</th>
-										<td>Valorant Masters</td>
-									</tr>
-									<tr>
-										<th scope="row">7</th>
-										<td>Dota 2 Invitational</td>
-									</tr>
-									<tr>
-										<th scope="row">7</th>
-										<td>Dota 2 Invitational</td>
-									</tr>
-								</tbody>
-							</table>
-
-						</div>
-					</div>
-				</div>
-				<div class="card bg-dark shadow-2-strong mt-2">
-					<div class="card-body">
-						<div class="table-responsive">
-							<table class="table table-hover table-dark table-borderless mb-0">
-								<thead>
-									<tr>
-										<th scope="col">#</th>
-										<th scope="col text-success">Add New Friends</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<th scope="row">2</th>
-										<td>Apex Legends Finals</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">3</th>
-										<td>Rocket League Weekly</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">4</th>
-										<td>Call of Duty Warzone</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">5</th>
-										<td>Fortnite Championship</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">6</th>
-										<td>Valorant Masters</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">7</th>
-										<td>Dota 2 Invitational</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
+								<tbody id="friendList">
+									<!-- friend list -->
 								</tbody>
 							</table>
 
@@ -301,7 +216,6 @@
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Understood</button>
 			</div>
 		</div>
 	</div>
