--- a/frontend/pages/users.html
+++ b/frontend/pages/users.html
@@ -13,49 +13,8 @@
 										<th scope="col text-success">Online Users</th>
 									</tr>
 								</thead>
-								<tbody>
-									<tr>
-										<th scope="row">2</th>
-										<td>Apex Legends Finals</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">3</th>
-										<td>Rocket League Weekly</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">4</th>
-										<td>Call of Duty Warzone</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">5</th>
-										<td>Fortnite Championship</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">6</th>
-										<td>Valorant Masters</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
-									<tr>
-										<th scope="row">7</th>
-										<td>Dota 2 Invitational</td>
-										<td>
-											<button class="btn btn-primary rounded-pill">Add +</button>
-										</td>
-									</tr>
+								<tbody id="userList">
+									
 								</tbody>
 							</table>
 
