feat: add register confirmation card after registration

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -59,13 +59,13 @@
 	<div class="modal-dialog modal-dialog-centered">
 		<div class="modal-content">
 		<div class="row justify-content-end">
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="closeBtn"></button>
 		</div>
 		<div class="modal-body">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-12">
-						<register-card></register-card>
+						<register-card id="registerCard"></register-card>
 					</div>
 				</div>
 			</div>
