--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -17,8 +17,9 @@
 				<!-- <label for="password" class="form-label">Password</label> -->
 				<input type="password" class="form-control" id="loginPassword" placeholder="Enter your password" required>
 			</div>
+			<div id="errorBox"></div>
 			<div class="d-grid">
-				<button type="submit" class="btn btn-register">LOGIN</button>
+				<button type="submit" class="btn btn-login" id="loginbtn">LOGIN</button>
 			</div>
 		</form>
 	</div>
