fix: home with root / should serve the appropriete page based on token existence

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<div class="d-flex">
+	<div class="d-flex" id="content">
 		<side-nav id="sidenav"></side-nav>
 
 		<div class="container d-flex justify-content-center align-items-center" id="app">
