--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -82,7 +82,7 @@
 		<ul class="dropdown-menu dropdown-menu-dark text-small shadow ul3" aria-labelledby="dropdownUser1">
 			<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
 			<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
-			<li><a class="dropdown-item" href="/profile" data-link>Profile</a></li>
+			<li><a class="dropdown-item profile" href="/profile" data-link>Profile</a></li>
 			<li>
 				<hr class="dropdown-divider">
 			</li>
