feat: update user friends number done

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -24,6 +24,7 @@
 							<div class="text-center"  id="statusDiv">
 								<i class="fa-regular fa-circle"></i>
 								<span class="mt-2">Status</span>
+								<p class="userStatus text-success">Online</p>
 							</div>
 							<div class="text-center" id="friendListDiv">
 								<i class="fa-regular fa-user"></i>
@@ -31,6 +32,7 @@
 									data-bs-target="#staticBackdrop" id="friendListBtn">
 									Friend List
 								</button>
+								<p class="friendNumber">0</p>
 							</div>
 							<div class="text-center">
 								<i class="fa-regular fa-message"></i>
