--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -6,15 +6,17 @@
 			<div class="row justify-content-center">
 				<div class="col-md-3 text-center">
 					<img src="../assets/user.png" alt="Profile Picture"
-						class="rounded-circle img-thumbnail">
+						class="rounded-circle img-thumbnail" id="userPicture">
+					<label for="formFile" class="form-label">Default file input example</label>
+					<input class="form-control" type="file" id="selectPicture" name="picture" accept="image/*">
 				</div>
 				<!-- user infos -->
 				<div class="card col-md-7  d-flex text-white bg-dark mb-3">
 					<div class="card-body">
 						<div class="d-flex justify-content-between">
 							<div>
-								<h2 class="card-title fw-bold">John Doe</h2>
-								<p class="text-muted">@johndoe</p>
+								<h2 class="card-title fw-bold" id="loggedUserName1">John Doe</h2>
+								<p class="text-muted" id="userNickName">@johndoe</p>
 							</div>
 							<div>
 								<button class="btn btn-primary rounded-pill">Add +</button>
