--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -75,19 +75,19 @@
 		<hr>
 		<div class="dropdown">
 			<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
-			id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+			id="user1" data-bs-toggle="dropdown" aria-expanded="false">
 			<img src="./assets/user1.png" alt="" width="32" height="32" class="rounded-circle me-2">
-			<strong>user</strong>
-		</a>
-		<ul class="dropdown-menu dropdown-menu-dark text-small shadow ul3" aria-labelledby="dropdownUser1">
-			<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
-			<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
-			<li><a class="dropdown-item profile" href="/profile" data-link>Profile</a></li>
-			<li>
-				<hr class="dropdown-divider">
-			</li>
-			<li><a class="dropdown-item" href="#">Sign out</a></li>
-		</ul>
+			<strong id="loggedUserName">user</strong>
+			</a>
+			<ul class="dropdown-menu dropdown-menu-dark text-small shadow ul3" aria-labelledby="user1">
+				<li><a class="dropdown-item" href="#" data-link>New project...</a></li>
+				<li><a class="dropdown-item" href="#" data-link>Settings</a></li>
+				<li><a class="dropdown-item profile" href="/profile" data-link>Profile</a></li>
+				<li>
+					<hr class="dropdown-divider">
+				</li>
+				<li><a class="dropdown-item" href="#">Sign out</a></li>
+			</ul>
 		</div>
 	<!-- </div> -->
 </div>
