fix: fixing some issues of synchronisation between Nav Pic and Profile Pic

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -5,7 +5,7 @@
 		<div class="container profileInfo" id="profileInfo">
 			<div class="row justify-content-center">
 				<div class="col-md-3 text-center">
-					<img src="../assets/user.png" alt="Profile Picture"
+					<img src="" alt="Profile Picture"
 						class="rounded-circle img-thumbnail" id="userPicture">
 					<label for="formFile" class="form-label">Default file input example</label>
 					<input class="form-control" type="file" id="selectPicture" name="picture" accept="image/*">
