--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -76,7 +76,7 @@
 		<div class="dropdown">
 			<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle"
 			id="user1" data-bs-toggle="dropdown" aria-expanded="false">
-			<img src="./assets/user1.png" alt="" width="32" height="32" class="rounded-circle me-2">
+			<img src="" alt="" width="32" height="32" id="userImageSnav" class="rounded-circle me-2">
 			<strong id="loggedUserName">user</strong>
 			</a>
 			<ul class="dropdown-menu dropdown-menu-dark text-small shadow ul3" aria-labelledby="user1">
