feature: profile image update done

--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -4,7 +4,7 @@
 			<img src="assets/pong.png" alt="pong_img" class="img-fluid">
 		</div>
 		<div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center homesection">
-			
+			<!-- Home Buttons -->
 		</div>				
 	</div>
 </div>
