feature: implementing 2fa authentication

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,7 @@
 	<script type="module" src="javascript/login.js?v=1.0.1"></script>
 	<script type="module" src="javascript/register.js?v=1.0.1"></script>
 	<script type="module" src="javascript/user.js?v=1.0.1"></script>
+	<script type="module" src="javascript/2fa.js?v=1.0.1"></script>
 	<script type="module" src="javascript/startgame.js"></script>
 	<script type="module" src="javascript/components/sidenav.js"></script>
 	<script type="module" src="javascript/components/loginCard.js"></script>
