--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -28,22 +28,8 @@
 					<input class="form-check-input" type="checkbox" id="enable2FA">
 					<label class="form-check-label" for="enable2FA">Enable</label>
 				</div>
-				<div id="choose2FaMehtod">
+				<div id="choose2FaMethod">
 					<!-- choose otp method -->
-
-					<div class="mb-4">
-						<label for="twoFaMethod" class="form-label">Choose 2FA Method:</label>
-						<select id="twoFaMethod" class="form-select" required>
-							<option value="sms">SMS</option>
-							<option value="email">Email</option>
-							<option value="totp">Authenticator App</option>
-						</select>
-					</div>
-
-					<button class="btn btn-primary" id="save" data-bs-toggle="modal" data-bs-target="#saveOtpMode">
-						Save
-					</button>
-
 				</div>
 			</div>
 			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
