feature: add login with 42 button to the authentication section

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -26,6 +26,19 @@
 			<div class="d-grid">
 				<button type="submit" class="btn btn-login" id="loginbtn">LOGIN</button>
 			</div>
+			
+			<div class="separator mt-2 mb-2" id="separator">
+				<hr>
+				<span class="fw-bold">Or</span>
+				<hr>
+			</div>
+
+			<div class="d-grid">
+				<button type="button" class="btn btn-42 btn-outline-light" id="googleLogin">
+					<img width="30" src="./assets/42.png" alt="Login with 42">
+					LOGIN WITH 42
+				</button>
+			</div>
 		</form>
 	</div>
 	<div class="card-footer text-secondary">
