fix: fixed routing when user is not authenticated

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -34,7 +34,7 @@
 			</div>
 
 			<div class="d-grid">
-				<button type="button" class="btn btn-42 btn-outline-light" id="googleLogin">
+				<button type="button" class="btn btn-42 btn-outline-light" id="42Login">
 					<img width="30" src="./assets/42.png" alt="Login with 42">
 					LOGIN WITH 42
 				</button>
