--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/auth.css" rel="stylesheet">
 	<link href="css/chat.css" rel="stylesheet">
+	<link href="css/responsive.css" rel="stylesheet">
 	<link href="css/tournaments.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Ping Pong</title>
@@ -19,14 +20,20 @@
 	<div class="d-flex" id="content">
 		<side-nav id="sidenav"></side-nav>
 
+		<div id="menuIcon">
+			<button class="btn" id="menuButton">
+				<i class="fa fa-bars fa-2x"></i>
+			</button>
+		</div>
+
 		<div class="container d-flex justify-content-center align-items-center" id="app">
 			<!-- App load -->
 		</div>
-		
+
 		<div id="chatIcon" class="bg-primary text-white p-3 rounded-circle">
 			<i class="bi bi-chat-dots-fill fs-3"></i>
 		</div>
-		
+
 		<!-- Chat Box -->
 		<div id="chatBox">
 			<div id="chatBoxHeader" class="d-flex justify-content-between align-items-center">
@@ -48,6 +55,7 @@
 	<!-- My scripts -->
 	<script type="module" src="javascript/app.js"></script>
 	<script type="module" src="javascript/chat.js"></script>
+	<script type="module" src="javascript/responsive.js?v=1.0.1"></script>
 	<script type="module" src="javascript/login.js?v=1.0.1"></script>
 	<script type="module" src="javascript/register.js?v=1.0.1"></script>
 	<script type="module" src="javascript/user.js?v=1.0.1"></script>
