fix: fixing new message notification behaviour

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,7 @@
 		<div id="chatIcon" class="text-white p-3 fw-bold">
 			<!-- <i class="bi bi-chat-dots-fill fs-3"></i> -->
 			<i class="fa-solid fa-envelope fa-2x"></i>
+			<span id="notificationNbr"></span>
 			<span class="fs-5 chat-text">Chat</span>
 		</div>
 
