feat: displayed messages received

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
 			<!-- <i class="bi bi-chat-dots-fill fs-3"></i> -->
 			<i class="fa-solid fa-envelope fa-2x"></i>
 			<span id="notificationNbr"></span>
-			<span class="fs-5 chat-text">Chat</span>
+			<span class="fs-5 chat-icon-title">Chat</span>
 		</div>
 
 		<!-- Chat Box -->
@@ -47,7 +47,7 @@
 		
 			<!-- Chat Messages -->
 			<div id="chatMessages">
-				<div id="messages" class="text-muted text-center">No messages yet...</div>
+				<div id="noMessages" class="text-muted text-center">No messages yet...</div>
 			</div>
 		
 			<!-- Input Area -->
@@ -56,13 +56,13 @@
 					<textarea id="chatInput" placeholder="Message #ot-games"></textarea>
 					<button type="submit" id="sendButton">Send</button>
 				</form>
+				<!-- Invite Button -->
+				<div id="inviteContainer">
+					<button id="inviteButton">🎮 Invite a Player</button>
+				</div>
 			</div>
 			
 		
-			<!-- Invite Button -->
-			<div id="inviteContainer">
-				<button id="inviteButton">🎮 Invite a Player</button>
-			</div>
 		</div>
 		
 	</div>
