fix: fixing sending message implementation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,8 +53,8 @@
 			<!-- Input Area -->
 			<div id="chatInputArea">
 				<form id="chatForm">
-					<textarea id="chatInput" placeholder="Message #ot-games"></textarea>
-					<button type="submit" id="sendButton">Send</button>
+					<input id="chatInput" placeholder="Message #ot-games">
+					<button id="sendButton">Send</button>
 				</form>
 				<!-- Invite Button -->
 				<div id="inviteContainer">
