feat: view user profile when click on the user profile in the chat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
 			<!-- Input Area -->
 			<div id="chatInputArea">
 				<form id="chatForm">
-					<input id="chatInput" placeholder="Message #ot-games">
+					<input id="chatInput" placeholder="Message #here">
 					<button id="sendButton">Send</button>
 				</form>
 				<!-- Invite Button -->
