fix: display first message in the chat if opened

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,7 @@
 			<!-- <i class="bi bi-chat-dots-fill fs-3"></i> -->
 			<i class="fa-solid fa-envelope fa-2x"></i>
 			<span id="notificationNbr"></span>
-			<span class="fs-5 chat-icon-title">Chat</span>
+			<span class="fs-5 chat-icon-title mb-3">Chat</span>
 		</div>
 
 		<!-- Chat Box -->
@@ -42,7 +42,7 @@
 			<!-- Chat Header -->
 			<div id="chatBoxHeader" class="d-flex justify-content-between align-items-center">
 				<span id="messageTo"># pong-chat</span>
-				<button id="closeChat" class="btn-close btn-close-white"></button>
+				<button id="closeChat" class="btn-close btn-close-white">-</button>
 			</div>
 		
 			<!-- Chat Messages -->
@@ -53,7 +53,7 @@
 			<!-- Input Area -->
 			<div id="chatInputArea">
 				<form id="chatForm">
-					<input id="chatInput" placeholder="Message #here">
+					<input id="chatInput" placeholder="Message #here" autocomplete="off">
 					<button id="sendButton">Send</button>
 				</form>
 				<!-- Invite Button -->
