fix: add - to chat close button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
 			<!-- Chat Header -->
 			<div id="chatBoxHeader" class="d-flex justify-content-between align-items-center">
 				<span id="messageTo"># pong-chat</span>
-				<button id="closeChat" class="btn-close btn-close-white">-</button>
+				<button id="closeChat" class="btn-close btn-close-white text-dark">-</button>
 			</div>
 		
 			<!-- Chat Messages -->
