feat: load user general informations

--- a/frontend/pages/profile.html
+++ b/frontend/pages/profile.html
@@ -18,9 +18,6 @@
 								<h2 class="card-title fw-bold" id="loggedUserName1">John Doe</h2>
 								<p class="text-muted" id="userNickName">@johndoe</p>
 							</div>
-							<div>
-								<button class="btn btn-primary rounded-pill">Add +</button>
-							</div>
 						</div>
 						<div class="card-text d-flex justify-content-between">
 							<div class="text-center"  id="statusDiv">
@@ -38,8 +35,8 @@
 							</div>
 							<div class="text-center">
 								<i class="fa-regular fa-message"></i>
-								<a href="#">Send Message</a>
-								<p class="text-success  class="mt-2"">Start</p>
+								<p>Role</p>
+								<p class="text-success mt-2">Player</p>
 							</div>
 						</div>
 					</div>
