--- a/frontend/pages/userprofile.html
+++ b/frontend/pages/userprofile.html
@@ -62,17 +62,17 @@
 						<div class="card-text">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">User Name</div>
-								<div class="bd-highlight  text-muted">Your Name</div>
+								<div class="bd-highlight text-muted" id="eachUserName2">Your Name</div>
 							</div>
 							<hr class="my-2">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">Full name</div>
-								<div class="bd-highlight text-muted">Your Name</div>
+								<div class="bd-highlight text-muted" id="eachUserName3">Your Name</div>
 							</div>
 							<hr class="my-2">
 							<div class="d-flex bd-highlight mb-3">
 								<div class="me-auto bd-highligh">Email account</div>
-								<div class="bd-highlight text-muted">yourname@gmail.com</div>
+								<div class="bd-highlight text-muted" id="eachUserEmail">yourname@gmail.com</div>
 							</div>
 						</div>
 					</div>
