feat: add canvas box to game.js

--- a/frontend/pages/sidenav.html
+++ b/frontend/pages/sidenav.html
@@ -27,7 +27,7 @@
 				</a>
 			</li> -->
 			<li class="nav-item">
-				<a href="/tournaments" class="nav-link text-white fw-bolder" data-link>
+				<a href="/ponggame" class="nav-link text-white fw-bolder" data-link>
 					<i class="fa-solid fa-trophy"></i>
 					Tournaments
 				</a>
