--- a/frontend/pages/ponggame.html
+++ b/frontend/pages/ponggame.html
@@ -1,31 +1,31 @@
-<h1>Pong Tournament</h1>
+<div class="container d-flex flex-column align-items-center mt-5">
 
-<div class="container text-center mt-5">
-    <h1 class="mb-4 fw-bold">🏓 Pong Tournament</h1>
+    <!-- Title -->
+    <h1 class="text-center fw-bold">Pong Game</h1>
 
-    <!-- Registration Section -->
-    <div id="registration" class="card shadow p-4 mb-4">
-        <h2 class="card-title mb-3">Register Players</h2>
-        <div class="input-group mb-3">
-            <input type="text" id="playerAlias" class="form-control" placeholder="Enter Alias">
-            <button id="registerPlayer" class="btn btn-primary">Register</button>
-        </div>
-        <ul id="playersList" class="list-group"></ul>
+    <!-- Game Canvas -->
+    <div class="border border-3 rounded p-3 shadow bg-light">
+        <canvas id="pongCanvas" width="800" height="400" class="d-block mx-auto"></canvas>
     </div>
 
-    <!-- Tournament Section -->
-    <div id="tournament" class="card shadow p-4 mb-4" style="display: none;">
-        <h2 class="card-title mb-3">Tournament Bracket</h2>
-        <div id="bracket" class="mb-3"></div>
-        <h3 id="currentMatch" class="text-primary fw-semibold"></h3>
-        <button id="startTournament" class="btn btn-success">Start Match</button>
+    <!-- Game Controls -->
+    <div class="d-flex flex-wrap gap-3 justify-content-center mt-4">
+        <button id="startGame" class="btn btn-primary">
+            <i class="bi bi-play-fill"></i> Start Game
+        </button>
+        <button id="pauseGame" class="btn btn-warning">
+            <i class="bi bi-pause-fill"></i> Pause Game
+        </button>
+        <button id="resumeGame" class="btn btn-success">
+            <i class="bi bi-play-circle-fill"></i> Resume Game
+        </button>
+        <button id="restartGame" class="btn btn-danger">
+            <i class="bi bi-arrow-clockwise"></i> Restart Game
+        </button>
     </div>
 
-    <!-- Pong Game Canvas -->
-    <div class="d-flex justify-content-center">
-        <canvas id="pongCanvas" class="border shadow bg-white" width="600" height="450"></canvas>
+    <!-- Game Status -->
+    <div id="gameStatus" class="alert alert-info text-center mt-4 w-50">
+        <!-- Game status updates here -->
     </div>
-
-    <!-- Restart Button -->
-    <button id="resetTournament" class="btn btn-danger mt-4">Restart Tournament</button>
 </div>
