fix: websocket connection established when click on start game

--- a/frontend/pages/ponggame.html
+++ b/frontend/pages/ponggame.html
@@ -10,10 +10,10 @@
 
     <!-- Game Controls -->
     <div class="d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button id="startGame" class="btn btn-primary">
+        <button id="startGame" class="btn btn-primary start-game">
             <i class="bi bi-play-fill"></i> Start Game
         </button>
-        <button id="pauseGame" class="btn btn-warning">
+        <button id="pauseGame" class="btn btn-warning pause-game">
             <i class="bi bi-pause-fill"></i> Pause Game
         </button>
         <button id="resumeGame" class="btn btn-success">
