--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 	<link href="css/auth.css" rel="stylesheet">
 	<link href="css/chat.css" rel="stylesheet">
 	<link href="css/responsive.css" rel="stylesheet">
-	<link href="css/tournaments.css" rel="stylesheet">
+	<link href="css/game.css" rel="stylesheet">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Ping Pong</title>
 </head>
@@ -75,7 +75,7 @@
 	<script type="module" src="javascript/register.js?v=1.0.1"></script>
 	<script type="module" src="javascript/user.js?v=1.0.1"></script>
 	<script type="module" src="javascript/2fa.js?v=1.0.1"></script>
-	<script type="module" src="javascript/initgame.js?v=1.0.1"></script>
+	<script type="module" src="javascript/game.js"></script>
 	<script type="module" src="javascript/tournament.js?v=1.0.1"></script>
 	<script type="module" src="javascript/components/sidenav.js"></script>
 	<script type="module" src="javascript/components/loginCard.js"></script>
