feat: local game working

--- a/frontend/pages/ponggame.html
+++ b/frontend/pages/ponggame.html
@@ -10,17 +10,17 @@
 
     <!-- Game Controls -->
     <div class="d-flex flex-wrap gap-3 justify-content-center mt-4">
-        <button id="startGame" class="btn btn-primary start-game">
-            <i class="bi bi-play-fill"></i> Start Game
+        <button id="startGame" class="btn pong-btn btn-primary start-game">
+            <i class="fa-solid fa-play fa-2x"></i> Start Game
         </button>
-        <button id="pauseGame" class="btn btn-warning pause-game">
-            <i class="bi bi-pause-fill"></i> Pause Game
+        <button id="pauseGame" class="btn pong-btn btn-warning pause-game">
+            <i class="fa-solid fa-pause fa-2x"></i> Pause Game
         </button>
-        <button id="resumeGame" class="btn btn-success">
-            <i class="bi bi-play-circle-fill"></i> Resume Game
+        <button id="resumeGame" class="btn pong-btn btn-success">
+            <i class="fa-solid fa-circle-play fa-2x"></i> Resume Game
         </button>
-        <button id="restartGame" class="btn btn-danger">
-            <i class="bi bi-arrow-clockwise"></i> Restart Game
+        <button id="restartGame" class="btn pong-btn btn-danger">
+            <i class="fa-solid fa-rotate-right"></i> Restart Game
         </button>
     </div>
 
