--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -11,9 +11,11 @@
 			<button class="nav-link text-start" id="v-pills-profile-tab" data-bs-toggle="pill" 
 		  		data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" 
 				aria-selected="false">Themes</button>
+
 			<button class="nav-link text-start" id="v-pills-messages-tab" data-bs-toggle="pill" 
 				data-bs-target="#v-pills-messages" type="button" role="tab" aria-controls="v-pills-messages" 
 				aria-selected="false">Language</button>
+
 			<button class="nav-link text-start" id="v-pills-settings-tab" data-bs-toggle="pill" 
 		  		data-bs-target="#v-pills-settings" type="button" role="tab" aria-controls="v-pills-settings" 
 				aria-selected="false">Notification</button>
@@ -32,7 +34,17 @@
 					<!-- choose otp method -->
 				</div>
 			</div>
-			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">...</div>
+			<div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+				<!-- change game themes -->
+
+				<div id="theme-selector">
+					<button class="btn btn-primary" id="classic">Classic</button>
+					<button class="btn btn-primary" id="dark">Dark</button>
+					<button class="btn btn-primary" id="neon">Neon</button>
+				</div>
+				
+
+			</div>
 			<!--  language settings -->
 			<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
 				<h3 class="mb-4">Languag<div class="dropdown ms-auto">
