fix: fixing settings pages

--- a/frontend/pages/settings.html
+++ b/frontend/pages/settings.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-	<h4 class="">Settings</h4>
+	<h4 class="text-white">Settings</h4>
 	<div class="d-flex align-items-start" id="tabsContainer">
 		<!-- Tabs menus -->
 		<div class="nav flex-column nav-pills border-end me-3" id="v-pills-tab" 
@@ -24,11 +24,11 @@
 		<!-- Tabs contents -->
 		<div class="tab-content" id="v-pills-tabContent">
 			<div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
-			<h3 class="mb-4">Two-Factor Authentication (2FA)</h3>
+			<h3 class="mb-4 text-white">Two-Factor Authentication (2FA)</h3>
 
 				<div class="form-check form-switch mb-4">
 					<input class="form-check-input" type="checkbox" id="enable2FA">
-					<label class="form-check-label" for="enable2FA">Enable</label>
+					<label class="form-check-label text-white" for="enable2FA">Enable</label>
 				</div>
 				<div id="choose2FaMethod">
 					<!-- choose otp method -->
@@ -47,7 +47,7 @@
 			</div>
 			<!--  language settings -->
 			<div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-				<h3 class="mb-4">Languag<div class="dropdown ms-auto">
+				<h3 class="mb-4">Language<div class="dropdown ms-auto">
 					<button class="btn btn-outline-primary dropdown-toggle" type="button" id="languageDropdown" data-bs-toggle="dropdown">
 						Language
 					</button>
@@ -76,7 +76,7 @@
 						<div class="col-md-12">
 							<div class="card" id="otpCard">
 								<div class="bg-dark pt-3">
-									<p class="fw-bolder ms-2">Two Factory Authentication</p>
+									<p class="fw-bolder ms-2 text-white">Two Factory Authentication</p>
 								</div>
 								<div class="card-body text-center p-4">
 									<div id="totpContainer">
